@@ -41,13 +41,6 @@
 	umount /dev/sda[1-9]
 
 	#////////////////////////////////////
-	#Remove Bash History file
-	rm ~/.bash_history
-
-	#Nano histroy file
-	rm ~/.nano_history
-
-	#////////////////////////////////////
 	# Clean Apt + cache
 
 	#Remove packages
@@ -97,6 +90,11 @@
 	rm -R /usr/share/doc-base
 	rm -R /usr/share/calendar
 
+	# - Remove Bash History file
+	rm ~/.bash_history
+
+	# - Nano histroy file
+	rm ~/.nano_history
 
 	#////////////////////////////////////
 	#Disable/Remove Swapfile (saves 100mb in final image)
@@ -181,7 +179,7 @@
 	/DietPi/dietpi/func/dietpi-set_hardware bluetooth disable
 	/DietPi/dietpi/func/dietpi-set_hardware wifi disable
 
-	# - Enable onboard WiFi chips (removes them from blacklist)
+	# Enable onboard WiFi chips by default (removes them from blacklist)
 	/DietPi/dietpi/func/dietpi-set_hardware wifi onboard_enable
 
 	# Disable forced eth speed if set
