@@ -2361,6 +2361,10 @@ _EOF_
 		rm /usr/local/sbin/log2ram &> /dev/null
 		rm /etc/systemd/system/log2ram.service &> /dev/null
 		#-------------------------------------------------------------------------------
+		#Cleanup ARMbian's resize service (not automatically removed by ARMbian scripts...)
+		systemctl disable resize2fs &> /dev/null
+		rm /etc/systemd/system/resize2fs.service &> /dev/null
+		#-------------------------------------------------------------------------------
 
 	fi
 
