@@ -17,6 +17,7 @@ DietPi-Sync | Sync location: now has a list option, which allows user to select 
 General | Odroids: Changed from http://oph.mdrjr.net/meveric to our new mirror http://fuzon.co.uk/meveric for Meverics repo.
 
 Bug fixes:
+General | ARMbian resizefs service. As this does not get removed by ARMbians initial setup scripts, we will remove it.
 General | All DEV 4.9 kernel images have been reverted back to STABLE 3.x. Recent 4.10 DEV updates from ARMbian are too unstable for acceptable usage of device: https://github.com/Fourdee/DietPi/issues/778#issuecomment-283112473
 General | ARMbian 'log2ram' has been removed on ARMbian built images, as this will conflict with DietPi-RAMlog: https://github.com/Fourdee/DietPi/issues/781
 DietPi-Software | Resolved an issue with OpenBazaar installation, due to python-pip error, resulting in a failure to run OB binary: https://github.com/Fourdee/DietPi/issues/784
